gave overlow-x hidden on main div to stop horizontal scroll bar from appearing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,6 +54,7 @@ body {
 
 .main {
   min-height: 100%;
+  overflow-x: hidden;
   &.background {
     background-image: url('../assets/images/backgrounds/monitor.jpg');
     background-position: top center;
